# HyperFit

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
cpp_bindings/: bindings.cpp  example.cpp  setup.py
examples/: basic_fitting.py
src/hyperfit/: __init__.py  api.py  config.py  data.py  exceptions.py  fitter.py  results.py
src/hyperfit/models/: __init__.py  base.py  mullins.py  ogden.py  polynomial.py  reduced_polynomial.py
src/hyperfit/strategies/: __init__.py  initializers.py  objectives.py
tests/: __init__.py  test_api.py  test_models.py
